Se actualizaron algunas funcionalidades

--- a/Usuarios/Dashboard/dashboard.html
+++ b/Usuarios/Dashboard/dashboard.html
@@ -153,11 +153,11 @@
         <div class="kpi-number" id="total-gastos">-</div>
       </div>
       <div class="kpi-card border-right">
-        <div class="kpi-title">Total Facturado</div>
+        <div class="kpi-title">Total CFDI</div>
         <div class="kpi-number" id="facturas-gastos">-</div>
       </div>
       <div class="kpi-card border-right">
-        <div class="kpi-title">Total sin Facturar</div>
+        <div class="kpi-title">Total Sin Comprobante</div>
         <div class="kpi-number" id="tickets-gastos">-</div>
       </div>
     </section>
