--- a/Usuarios/proyectos/proyectos.html
+++ b/Usuarios/proyectos/proyectos.html
@@ -176,8 +176,8 @@
       <thead>
         <tr>
         <th style="text-align:center;">Cliente</th>
-        <th style="text-align:center;">Proyecto</th>
-        <th style="text-align:center;">Descripción</th>
+        <th style="text-align:center;">Id</th>
+        <th style="text-align:center;">Nombre</th>
         <th style="text-align:center;">Ubicación</th>
         <th style="text-align:center;">Fecha inicio</th>
         <th style="text-align:center;">Fecha fin</th>
