--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -74,6 +74,12 @@
     <span>Gastos</span>
   </a>
 </li>
+<li>
+    <a href="../vehiculos/vehiculos.html" class="submenu-link">
+      <i class="ri-car-line"></i>
+      Vehículos
+    </a>
+  </li>
 </ul>
     </li>
           </ul>
