Ya se inserta en la columna presupuesto

--- a/modules/proyectos/proyectos.html
+++ b/modules/proyectos/proyectos.html
@@ -203,6 +203,7 @@
         <th style="text-align:center;">Ubicación</th>
         <th style="text-align:center;">Fecha inicio</th>
         <th style="text-align:center;">Fecha fin</th>
+        <th style="text-align:center;">Presupuesto</th>
         <th style="text-align:center;">Responsable Proyecto</th>
         <th style="text-align:center;">Responsable Viáticos</th>
         <th style="text-align:center;">Acciones</th>
