Funcion de el presupuesto

--- a/modules/proyectos/proyectos.html
+++ b/modules/proyectos/proyectos.html
@@ -204,6 +204,7 @@
         <th style="text-align:center;">Fecha inicio</th>
         <th style="text-align:center;">Fecha fin</th>
         <th style="text-align:center;">Presupuesto</th>
+        <th style="text-align:center;">Presupuesto Total</th>
         <th style="text-align:center;">Responsable Proyecto</th>
         <th style="text-align:center;">Responsable Viáticos</th>
         <th style="text-align:center;">Acciones</th>
@@ -293,6 +294,9 @@
     <div style="background:#f8f9fa; padding:16px; border-radius:8px; margin-bottom:20px; border-left:4px solid #28a745;">
       <h4 style="color:#003B5C; margin:0 0 8px 0;">Proyecto: <span id="presupuesto-proyecto-nombre" style="font-weight:normal;"></span></h4>
       <p style="color:#666; margin:0; font-size:0.9em;">Cliente: <span id="presupuesto-cliente"></span></p>
+      <p style="color:#28a745; margin:8px 0 0 0; font-weight:600; font-size:0.95em;">
+        Presupuesto Total Actual: <span id="presupuesto-total-actual">$0.00</span>
+      </p>
     </div>
 
     <form id="form-asignar-presupuesto">
