Actualizacion de cambios

--- a/modules/trabajador/trabajador.html
+++ b/modules/trabajador/trabajador.html
@@ -47,6 +47,12 @@
                 <span>Reportes</span>
               </a>
             </li>
+              <li>
+              <a href="../constancia/constancia.html">
+               <i class="ri-file-shield-2-line"></i>
+                <span>Constancia</span>
+              </a>
+            </li>
             <li class="has-submenu ">
       <a href="#" class="submenu-toggle">
         <i class="ri-add-line"></i>
