--- a/Usuarios/proyectos/proyectos.html
+++ b/Usuarios/proyectos/proyectos.html
@@ -55,6 +55,12 @@
                   <span>Gastos</span>
                 </a>
             </li>
+             <li >
+              <a href="../constancia/constancia.html">
+               <i class="ri-file-shield-2-line"></i>
+                <span>Constancia</span>
+              </a>
+            </li>
             <li  class="active">
                 <a href="../proyectos/proyectos.html">
                   <i class="ri-folder-2-line"></i>
