--- a/Usuarios/registros/registros.html
+++ b/Usuarios/registros/registros.html
@@ -328,7 +328,7 @@
 
 <!-- Modal para preguntas -->
 <div id="modalPreguntas" class="modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.3); justify-content:center; align-items:center; z-index:1000;">
-  <div class="modal-content modal-proyecto" style="max-width:600px; min-width:550px; padding:32px 32px 24px 32px; border-radius:18px; box-shadow:0 4px 24px rgba(0,59,92,0.12); position:relative; background:#fff;">
+  <div class="modal-content modal-proyecto" style="max-width:800px; min-width:750px; padding:32px 32px 24px 32px; border-radius:18px; box-shadow:0 4px 24px rgba(0,59,92,0.12); position:relative; background:#fff;">
     <button id="cerrarModalPreguntas" class="modal-close" type="button" style="position:absolute; top:18px; right:18px; background:none; border:none; font-size:1.5em; cursor:pointer;">
       <i class="ri-close-line"></i>
     </button>
@@ -337,12 +337,12 @@
     <form id="formPreguntas">
       <div class="modal-form-grid" style="display:grid; grid-template-columns:1fr 1fr; gap:24px 32px; margin-bottom:24px;">
         <div class="modal-form-group" style="display:flex; flex-direction:column;">
-  <label for="respuesta1" style="font-weight:600; color:#276080; margin-bottom:6px;">Vehículo Utilizado</label>
-  <select id="respuesta1" name="respuesta1" style="padding:10px 12px; border:1.5px solid #ececec; border-radius:8px; background:#f7f8f6; font-size:1em;">
-    <option value="" disabled selected>Selecciona un vehículo</option>
-    <!-- Las opciones se llenarán dinámicamente -->
-  </select>
-</div>
+          <label for="respuesta1" style="font-weight:600; color:#276080; margin-bottom:6px;">Vehículo Utilizado</label>
+          <select id="respuesta1" name="respuesta1" style="padding:10px 12px; border:1.5px solid #ececec; border-radius:8px; background:#f7f8f6; font-size:1em;">
+            <option value="" disabled selected>Selecciona un vehículo</option>
+            <!-- Las opciones se llenarán dinámicamente -->
+          </select>
+        </div>
         <div class="modal-form-group" style="display:flex; flex-direction:column;">
           <label for="respuesta2" style="font-weight:600; color:#276080; margin-bottom:6px;">Personal que viaticó</label>
           <input type="text" id="respuesta2" name="respuesta2"  style="padding:10px 12px; border:1.5px solid #ececec; border-radius:8px; background:#f7f8f6; font-size:1em;">
@@ -352,7 +352,8 @@
         <button type="submit" class="btn primary" style="background:#FF6F00; color:#fff; border:none; padding:12px 32px; border-radius:8px; font-size:1.1em; font-weight:700; cursor:pointer;">Continuar</button>
         <button type="button" class="btn" id="cancelarModalPreguntas" style="background:#f7f8f6; color:#003B5C; border:none; padding:12px 32px; border-radius:8px; font-size:1.1em; font-weight:600; cursor:pointer;">Cancelar</button>
       </div>
+    </form>
+  </div>
 </div>
-
   </body>
 </html>
