--- a/Usuarios/Dashboard/dashboard.html
+++ b/Usuarios/Dashboard/dashboard.html
@@ -166,6 +166,14 @@
         <div class="kpi-title">Total Sin Comprobante</div>
         <div class="kpi-number" id="tickets-gastos">-</div>
       </div>
+      <div class="kpi-card border-right">
+        <div class="kpi-title">Total Viaticos</div>
+        <div class="kpi-number" id="tickets-Viaticos">-</div>
+      </div>
+      <div class="kpi-card border-right">
+        <div class="kpi-title">Total Viaticos Restantes</div>
+        <div class="kpi-number" id="tickets-viaticos-restantes">-</div>
+      </div>
     </section>
   </aside>
 
