--- a/Usuarios/gastos/gastos.html
+++ b/Usuarios/gastos/gastos.html
@@ -139,6 +139,16 @@
               <i class="ri-add-line"></i>
               Nuevo gasto
             </button>
+
+
+             <div class="filter-group">
+              <select id="filtro-tipo" class="filter-select">
+                <option value="">Todos los tipos</option>
+                <option value="CFDI">CFDI</option>
+                <option value="SIN COMPROBANTE(TICKET O NOTA)">SIN COMPROBANTE(TICKET O NOTA)</option>
+              </select>
+            </div>
+
             <div class="search-bar">
               <input type="text" class="input-buscar" placeholder="Buscar...">
               <i class="ri-search-line"></i>
